Changed font size, added image preview to posts and lot more

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 title: About Me
 ---
 
-<p>Hello, I am Mahi!</p>
+<p class="f0-light">Hello, I am Mahi!</p>
 <!-- <p><img src="https://www.gravatar.com/avatar/35402e9112d76326f74f0e141591f4e1?s=512" alt="Me, Mahi"></p> -->
 <p>I am a second-year Ph.D. student studying Computer Science at <a href='https://cs.nyu.edu/home/index.html'>NYU
         Courant </a> working primarily with <a href="lerrelpinto.com">Prof. Lerrel Pinto</a>. I work on machine learning
